<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity"
        android:background="@color/white">

    <ImageView
            android:id="@+id/reg_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/regbg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/name"
            android:textColor="#888887"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:background="@drawable/edittext_background"
            android:padding="13dp"
            android:elevation="3dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_img"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"/>

    <EditText
            android:id="@+id/email_reg"
            android:textColor="#888887"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:background="@drawable/edittext_background"
            android:padding="13dp"
            android:elevation="3dp"
            android:layout_marginTop="14dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:drawableStart="@drawable/account"
            android:drawablePadding="10dp"/>

    <EditText
            android:id="@+id/password_reg"
            android:textColor="#888887"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:background="@drawable/edittext_background"
            android:padding="13dp"
            android:elevation="3dp"
            android:layout_marginTop="14dp"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_reg"
            android:drawableStart="@drawable/keylog"
            android:drawablePadding="13dp"/>

    <Button
            android:id="@+id/reg_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:padding="14dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/password_reg"
            app:layout_constraintVertical_bias="0.22"/>
    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintHorizontal_bias="0.4"/>
    <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textColor="@color/purple_700"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
    />
</androidx.constraintlayout.widget.ConstraintLayout>